Fixed broken UI in room

--- a/webapp/client/templates/room.css
+++ b/webapp/client/templates/room.css
@@ -1,3 +1,15 @@
+.playerContainer, .buttonContainer {
+	display: flex;
+	justify-content: center;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.startButton {
+	width: 150px;
+	height: 44px;
+}
+
 .searchGroup {
 	display: flex;
 	justify-content: center;
@@ -23,7 +35,7 @@
 	position: relative;
 	display: inline-block;
 	margin-left: 10px;
-	width: 8.1%;
+	width: 7.5%;
 	height: 44px;
 }
 
@@ -32,7 +44,7 @@
 	width: 100%;
 	height: 100%;
 	background-image: url("/search-icon.png");
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
 	border: 0;
 	color: transparent;
